system/cms/themes/pyrocms/css/workless/workless.css
/* ... */
a.button {
	padding-top: 2px;
}

.cancel { padding: 3px 10px 4px 10px; }

.button:hover,
.cancel:hover,
button:hover,
input[type="reset"]:hover,
input[type="submit"]:hover,
input[type="button"]:hover {
  background: #ffffff;
  background-image: -khtml-gradient(linear, left top, left bottom, from(#dddddd), to(#ffffff));
  background-image: -moz-linear-gradient(#dddddd, #ffffff);
  background-image: -ms-linear-gradient(#dddddd, #ffffff);
  background-image: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #dddddd), color-stop(100%, #ffffff));
  background-image: -webkit-linear-gradient(#dddddd, #ffffff);
  background-image: -o-linear-gradient(#dddddd, #ffffff);
  background-image: linear-gradient(#dddddd, #ffffff);
  border: 1px solid;
  border-color: #999999 #bbbbbb #dddddd;
  -webkit-transition: 250ms linear all;
  -moz-transition: 250ms linear all;
  transition: 250ms linear all;
  color: #000;
}

input[type="text"], 
input[type="password"], 
textarea 
{
  background: #eeeeee;
  margin-bottom: 5px;
  padding: 8px 5px;
  border-radius: 2px;
  border: 1px solid rgba(0, 0, 0, 0.2);
  box-shadow: 0 1px 1px rgba(0, 0, 0, 0.1) inset;
}
input[type="file"] 
{
  padding: 5px;
  border: 1px solid rgba(0, 0, 0, 0.2);
  border-radius: 2px;
}
input[type="text"],
input[type="password"],
input[type="file"],
textarea
{
  -webkit-transition: 250ms linear all; 
  -moz-transition: 250ms linear all; 
  transition: 250ms linear all; 
}
input[type="text"]:focus, 
input[type="password"]:focus, 
input[type="file"]:focus,
textarea:focus
{
  background: #ffffff;
  border: 1px solid #2daebf;
  box-shadow: 0 0 5px #2daebf;
}

input.error {
	border: 5px solid #ff0000;
	border: 5px solid rgba(255, 0, 0, .5);
}

/* Colors for form validity */
input:valid, textarea:valid {  }
input:invalid, textarea:invalid { background-color: #f0dddd; }

.required-icon {
	color: red!important;
	display: block-inline;
}

/* Form UL Structure */

.form_inputs {
	width: 100%;
	overflow: hidden;
}
.move-handle {display: none;}
.form_inputs fieldset {
	width: 250px;
}
.form_inputs fieldset > ul,
.form_inputs > ul {
	width: 100%;
	height: 100%;
	margin-bottom: 0;
	padding-bottom: 0;
	overflow: hidden;
}
.form_inputs fieldset > ul > li,
.form_inputs > ul > div > li,
.form_inputs fieldset > ul > div > li,
.form_inputs > ul > li {
	float: left;
	width: 100%;
	border-bottom: 1px solid #efefef;
	padding-bottom: 10px;
	margin-bottom: 10px;
}
.form_inputs > ul > div > li:last-child,
.form_inputs fieldset > ul > li:last-child,
.form_inputs > ul > li:last-child {
	border-bottom: none!important;
}
.form_inputs fieldset > ul > li > label,
.form_inputs fieldset > ul > div > li > label,
.form_inputs > ul > div > li > label,
.form_inputs > ul > li > label,
.form_inputs fieldset > ul > li .label,
.form_inputs > ul > li .label {
	width: 90%;
	float: left;
	text-align: left;
	margin: 0 3% 0 0;
	padding: 8px;
}
.form_inputs fieldset > ul > li > label span,
.form_inputs > ul > li > label span {
	color: red;
}
.form_inputs .input {
	float: left!important;
	padding-left: 10px;
	width: 69%;
}
.form_inputs .input > input {
	color: #666;
	min-width: 210px!important;
}
.form_inputs label small {
	display: block;
	font-weight: normal;
	font-size: 11px;
	color: #666666;
}
.form_inputs input,
.form_inputs textarea {
-webkit-transition: 250ms linear all; 
  -moz-transition: 250ms linear all; 
  transition: 250ms linear all;
  width: 100%;
}

.form_inputs input:focus,
.form_inputs textarea:focus {
  background: #eeeeee;
	color: #4D4D4D;
	outline: none;
	border-color: #ed8e28;
  box-shadow: 0 0 5px #ed8e28;
}
.form_inputs .datetime_input select {
	width:  100px;
}

/**
 * Tables
 */
table 
{
    width: 100%;
    margin-bottom: 18px;
    padding: 0;
    border-collapse: separate;
    font-size: 13px;
    border: 1px solid #dddddd;
    border-radius: 3px;
}
table th, 
table td 
{
    padding: 10px;
    line-height: 13.5px;
    text-align: left;
    vertical-align: middle;
    border-top: 1px solid #dddddd;
}
table th 
{
    font-weight: bold;
    border-top: none;
}

table tr
{
    background: #f5f5f5;
    background-repeat: repeat-x;
    background-image: -khtml-gradient(linear, left top, left bottom, from(#f5f5f5), to(#f3f3f3));
    background-image: -moz-linear-gradient(#f5f5f5, #f3f3f3);
    background-image: -ms-linear-gradient(#f5f5f5, #f3f3f3);
    background-image: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #f5f5f5), color-stop(100%, #f3f3f3));
    background-image: -webkit-linear-gradient(#f5f5f5, #f3f3f3);
    background-image: -o-linear-gradient(#f5f5f5, #f3f3f3);
    background-image: linear-gradient(#f5f5f5, #f3f3f3);
    border: 1px solid #ffffff;
    border-bottom: 1px solid #eeeeee;
}

/* Added alt tables globally. To remove just chnage table to .table */
table tbody tr:nth-child(odd) td 
{
    background-color: #f9f9f9;
}
table tbody tr:hover td 
{
    background-color: #f5f5f5;
}

table .actions {
	text-align: right;
}
table .actions a {
	display: block;
	margin-bottom: 5px;
	text-align: center;
}

/* ----------------------------------
 *   Helpers
 * ---------------------------------- */

/* Buttons */
.buttons {
	white-space: nowrap;
}
/* ... */

